build(upptime): config update

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -16,9 +16,9 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This page shows the **real-time** status of my personal projects
+  introMessage: This page shows the **real-time** status of my personal projects.
   navbar:
     - title: Status
-      href: /
+      href: /upptime
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
