--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,7 +5,7 @@ sites:
   - name: Mapeaks
     url: https://mapeaks-production.herokuapp.com/ping
   - name: Oxidizer
-    url: https://oxidizer.rs
+    url: https://oxidizer-rs.github.io
   - name: Runlet
     url: https://runlet.app
   - name: Sentineo
